--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 
 .bg-clr {
-    background-color:rgb(221, 67, 67);
+    background-color:rgb(95, 10, 10);
 }
 
 .content {
@@ -34,7 +34,7 @@
   }
 
 .fontColorWhite {
-    color:rgb(56, 46, 46);
+    color:rgb(252, 252, 252);
 }
 
 .carousel-img {
@@ -73,7 +73,7 @@
   }
 
 .color {
-    color: rgb(56, 43, 43);
+    color: rgb(255, 250, 250);
 }
 
 .form-w {
@@ -98,6 +98,10 @@ footer {
   
   footer a:hover {
     color: #007bff; /* Change color on hover */
+  }
+
+  .fa-whatsapp {
+    color:rgb(10, 233, 10);
   }
   
 @media only screen and (max-width:450px){
